--- a/5. UDP. Multicast -address/Datagram sockets/Datagram sockets.csproj
+++ b/5. UDP. Multicast -address/Datagram sockets/Datagram sockets.csproj
@@ -7,4 +7,12 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="app.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="app.ico" />
+  </ItemGroup>
+
 </Project>
