Add application icon and improve icon loading in Form1
- Set application icon in project file and Form1.
- Implemented logic to load the application icon at runtime, with fallback to default icon if loading fails.
- Updated resource inclusion to ensure the icon is copied to the output directory.

--- a/5. UDP. Multicast -address/Datagram sockets/Datagram sockets.csproj
+++ b/5. UDP. Multicast -address/Datagram sockets/Datagram sockets.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <RootNamespace>Datagram_sockets</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>app.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="app.ico" />
+    <Content Include="app.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
